REFACTORED cell path iterator ArrayList methods for better support